--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,8 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="compound_drawable_size">24dp</dimen>
+    <dimen name="default_segment_text_size">16sp</dimen>
+    <dimen name="default_segment_height">48dp</dimen>
+    <dimen name="default_border_width">1dp</dimen>
+    <dimen name="default_corner_radius">8dp</dimen>
 </resources>
